kubernetes/apps/default/stirling-pdf/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
  namespace: default
  labels:
    app: stirling-pdf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: stirling-pdf
          image: ghcr.io/stirling-tools/stirling-pdf:3.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /api/v1/info/status
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/info/status
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
            - name: stirling-pdf-config
              mountPath: /configs
            - name: stirling-pdf-logs
              mountPath: /logs
      volumes:
        - name: stirling-pdf-config
          persistentVolumeClaim:
            claimName: stirling-pdf-config-pvc-lh
        - name: stirling-pdf-logs
          persistentVolumeClaim:
            claimName: stirling-pdf-logs-pvc-lh
