kubernetes/apps/default/stirling-pdf/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: default
  labels:
    app: stirling-pdf
  annotations:
    external-dns.alpha.kubernetes.io/hostname: stirling-pdf.torquasmvo.internal
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.236
  selector:
    app: stirling-pdf
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
